@@ -14,6 +14,12 @@ binaries=list_lists find_member config_list mmsitepass newlist rmlist	\
 
 SHELL=/bin/bash
 
+# the '-include' is for compatibility with squeeze.
+# replace with 'include' after squeeze support is over, or
+# replace with 'include /usr/share/dpkg/default.mk' to replace vars above
+DPKG_EXPORT_BUILDFLAGS = 1
+-include /usr/share/dpkg/buildflags.mk
+
 ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
 CFLAGS += -g
 endif
